--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ textarea {
    ========================================================================== */
 
 body{
-  background-image: url("/img/sky.jpg");  
+  background-image: url("img/sky.jpg");  
   background-position: top;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -253,7 +253,7 @@ a{
 
 /* potr */
 #potr{
-  background-image: url("/img/path.jpg");
+  background-image: url("img/path.jpg");
   background-position: center;  
   background-size: 100%;
   background-color: rgb(37, 37, 37);
@@ -266,7 +266,7 @@ a{
 
 /* sacred-heresy */
 #sacred-heresy{
-  background-image: url("/img/dark-woman.jpg");
+  background-image: url("img/dark-woman.jpg");
   background-position: center;  
   background-size: 1400px;
   background-repeat: no-repeat;
