--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ a{
 }
 
 .button{
-  background-color: rgb(4, 53, 185);
+  background-color: rgb(0, 0, 0);
   border: none;
   color: white;
   padding: 10px 10px;
@@ -236,6 +236,8 @@ a{
 #location-map{
   width: 75vw;
   height: 75vw;
+  max-width: 500px;
+  max-height: 500px;
   border: 0;
   margin: auto;
 }
