--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,8 @@ textarea {
 
 body{
   background-image: url("../img/sky.jpg");
-  background-position: top;
+  background-attachment: fixed;
+  background-position: center;
   background-color: rgb(255,255,255);
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -289,7 +290,6 @@ a{
   background-position: center;  
   background-size: 100%;
   background-color: rgb(37, 37, 37);
-  background-attachment: fixed;
 }
 
 #potr main, #potr footer{
@@ -307,7 +307,6 @@ a{
   background-size: 1700px;
   background-repeat: no-repeat;
   background-color: rgb(37, 37, 37);
-  background-attachment: fixed;
 }
 
 /* game pages */
@@ -512,8 +511,6 @@ a{
   
   #header-contact{
     text-align: right;
-    font-size: 12px;
-    margin: auto 0;
   }
 
   #home-main h1{
