--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,7 @@ a{
   text-decoration: none;
   font-size: 15px;
   margin: auto;
+  cursor: pointer;
 }
 
 .dark-background{
@@ -286,7 +287,7 @@ a{
 
 /* potr */
 #potr{
-  background-image: url("../img/path.jpg");
+  background-image: url("../img/path-small.jpg");
   background-position: center;  
   background-size: 100%;
   background-color: rgb(37, 37, 37);
@@ -303,7 +304,7 @@ a{
 /* sacred-heresy */
 #sacred-heresy{
   background-image: url("../img/dark-woman.jpg");
-  background-position: center;  
+  background-position: bottom;  
   background-size: 1700px;
   background-repeat: no-repeat;
   background-color: rgb(37, 37, 37);
@@ -525,5 +526,8 @@ a{
   #social-media{
     justify-content: center;
   }
+
+  #potr{
+    background-image: url("../img/path.jpg");
 }
 
