--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,7 @@ a{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   text-align: center;
+  padding: 0;
 }
 
 #site-nav .container a{
@@ -513,6 +514,10 @@ a{
   
   #header-contact{
     text-align: right;
+  }
+
+  #site-nav .container{
+    padding: 0 5%;
   }
 
   #home-main h1{
